--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 <body>
     <div class="jumbotron text-center">
         <h1>PP Bank</h1>
-        <p>Loan Application Form</p>
+        <p>Loan Application Prediction</p>
     </div>
 
     <div class="container">
